<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expense Split</string>
    <string name="btn_split">Split</string>
    <string name="btn_deadlines">Deadlines</string>
    <string name="btn_history">History</string>
    <string name="add_expense">Enter Expense Title</string>
    <string name="title">Title</string>
    <string name="payers">Payers</string>
    <string name="pay_type">Pay Type</string>
    <string name="equal">Equal</string>
    <string name="custom">Custom</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_payer">Add Payer</string>
    <string name="contentDesc">+</string>
    <string name="paySign">$</string>
    <string name="add_name">Add Payer Name</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_payers">Please choose at least one payer</string>
    <string name="invalid_percentage">Selected payer(s) percentages must add to 100%</string>

    <string name="type">Type</string>
    <string name="invalid_amount">Please enter a number with up to 2 decimal places and provide a title</string>
    <string name="enter_amount">Enter Amount ($)</string>
    <string name="due_date">Due date</string>
    <string name="pick_a_date_optional">Pick a date (optional)</string>
    <string name="information">Information</string>
    <string name="uninstall">Uninstall</string>
    <string name="info_html"><![CDATA[
    <b>Expense Split – Feature Overview</b><br><br>
    <ul>
    <li>Split – create a new expense split</li>
    <li>Deadline – view active expenses with due dates</li>
    <li>History – view previously completed expenses</li>
    </ul><br>

    <b>Split</b><br><br>
    The user must provide:<br>
    <ul>
    <li>A title</li>
    <li>An expense amount</li>
    <li>At least one payer</li><br>
    Press Save to create the split.<br><br>

    <b>Deadline</b><br><br>
    <ul>
    <li>Sort by title, date, payer, or amount</li>
    <li>Overdue items are shown in red</li>
    <li>Long-press to move an item to History</li>
    </ul><br>

    <b>History</b><br>
    <ul>
    <li>Long-press to reactivate and send back to Deadline</li>
    </ul>
    ]]></string>

    <string-array name="sort_types">
        <item>Title</item>
        <item>Name</item>
        <item>Amount</item>
        <item>Due Date</item>
    </string-array>
</resources>
